<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/note_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/note_description"
            android:textColor="#878787"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_description"
            android:layout_alignParentEnd="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/note_date"
            android:textColor="#878787"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>